<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".businesscase.SignUpFragment">
    <!-- For our design we have opted for non-floating input hints.
        So there is value for the hint property in each InputLayout widgets -->

    <data>

        <variable
            name="fragment"
            type="com.fabricethilaw.gozem.businesscase.SignUpFragment" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        tools:ignore="SpeakableTextPresentCheck">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="@dimen/grid_2">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/title"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/grid_2"
                android:text="@string/sign_up_fragment_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageView" />


            <LinearLayout
                android:id="@+id/linear_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:maxWidth="360dp"
                android:minWidth="360dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.509"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/full_name" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_full_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1dp"
                    app:boxCornerRadiusBottomEnd="@dimen/grid_2"
                    app:boxCornerRadiusBottomStart="@dimen/grid_2"
                    app:boxCornerRadiusTopEnd="@dimen/grid_2"
                    app:boxCornerRadiusTopStart="@dimen/grid_2"
                    app:endIconMode="clear_text"
                    app:errorEnabled="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12dp"
                    android:text="@string/email" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1dp"
                    app:boxCornerRadiusBottomEnd="@dimen/grid_2"
                    app:boxCornerRadiusBottomStart="@dimen/grid_2"
                    app:boxCornerRadiusTopEnd="@dimen/grid_2"
                    app:boxCornerRadiusTopStart="@dimen/grid_2"
                    app:endIconMode="clear_text"
                    app:errorEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12dp"
                    android:text="@string/password" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1dp"
                    app:boxCornerRadiusBottomEnd="@dimen/grid_2"
                    app:boxCornerRadiusBottomStart="@dimen/grid_2"
                    app:boxCornerRadiusTopEnd="@dimen/grid_2"
                    app:boxCornerRadiusTopStart="@dimen/grid_2"
                    app:errorEnabled="false"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12dp"
                    android:text="@string/confirm_password" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_confirm_password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1dp"
                    app:boxCornerRadiusBottomEnd="@dimen/grid_2"
                    app:boxCornerRadiusBottomStart="@dimen/grid_2"
                    app:boxCornerRadiusTopEnd="@dimen/grid_2"
                    app:boxCornerRadiusTopStart="@dimen/grid_2"
                    app:errorEnabled="false"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_register"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/grid_2"
                android:layout_marginBottom="@dimen/grid_2"
                android:onClick="@{() -> fragment.register()}"
                android:paddingVertical="@dimen/grid_2"
                android:text="@string/register"
                android:textAllCaps="false"
                app:cornerRadius="@dimen/grid_2"
                app:layout_constraintEnd_toEndOf="@id/linear_layout"
                app:layout_constraintStart_toStartOf="@+id/linear_layout"
                app:layout_constraintTop_toBottomOf="@+id/linear_layout"
                app:layout_constraintVertical_bias="1.0" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/go_to_sign_in"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/grid_0_5"
                android:layout_marginBottom="@dimen/grid_2"
                android:onClick="@{()-> fragment.goToSignIn()}"
                android:text="@string/i_already_have_account"
                android:textAllCaps="false"
                app:cornerRadius="@dimen/grid_2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/linear_layout"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="@+id/linear_layout"
                app:layout_constraintTop_toBottomOf="@+id/btn_register"
                app:layout_constraintVertical_bias="0.1" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>