...
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/grid_2"
                android:onClick="@{()-> fragment.signIn()}"
                android:paddingVertical="@dimen/grid_2"
...
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/linear_layout"
                app:layout_constraintTop_toBottomOf="@+id/linear_layout"
                app:layout_constraintVertical_bias="0.1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/go_to_signup"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/grid_0_5"
                android:onClick="@{() -> fragment.goToSignUp()}"
                android:text="@string/or_register"
...
